# trieve_client_py

./: README.md  pyproject.toml
.code-gen/: generate.sh  openapi.json  py-generator.yaml
examples/: upload_chunks.py  upload_chunks_and_rag.py  upload_chunks_and_search.py
trieve_client/: __init__.py
trieve_client/api/auth/: callback.py  get_me.py  login.py  logout.py
trieve_client/api/chunk/: create_chunk.py  create_suggested_queries_handler.py  delete_chunk.py  delete_chunk_by_tracking_id.py  generate_off_chunks.py  get_chunk_by_id.py  get_chunk_by_tracking_id.py  get_recommended_chunks.py  search_chunk.py  update_chunk.py  update_chunk_by_tracking_id.py
trieve_client/models/: __init__.py  add_chunk_to_group_data.py  api_key_dto.py  auth_data.py  auth_query.py  bookmark_chunks.py  bookmark_data.py  bookmark_group_result.py  chat_message_proxy.py  chunk_group.py  chunk_group_and_file.py  chunk_metadata.py  chunk_metadata_with_file_data.py  client_dataset_configuration.py  create_chunk_data.py  create_chunk_group_data.py  create_dataset_request.py  create_message_data.py  create_organization_data.py  create_topic_data.py  dataset.py  dataset_and_org_with_sub_and_plan.py  dataset_and_usage.py  dataset_dto.py  dataset_group_query.py  dataset_usage_count.py  default_error.py  delete_bookmark_path_data.py  delete_dataset_request.py  delete_group_data.py  delete_topic_data.py  delete_user_api_key_request.py  edit_message_data.py  error_response_body.py  event.py  event_id.py  event_return.py  file.py  file_dto.py  generate_chunks_request.py  (+47 more)
(+44 files in other folders)
