[tool.poetry]
name = "trieve_client_py"
version = "0.3.2-2"
description = "Python client library for trieve.ai"
authors = ["Denzell Ford <denzell.f@trieve.ai>"]
readme = "README.md"
packages = [
    {include = "trieve_client"},
]
include = ["CHANGELOG.md", "trieve_client/py.typed"]


[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.20.0,<0.27.0"
attrs = ">=21.3.0"
python-dateutil = "^2.8.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["F", "I", "UP"]
line-length = 120
